--- a/Custom/CustomBlocks/CustomBlocks.csproj
+++ b/Custom/CustomBlocks/CustomBlocks.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consumer.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Producer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
